--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="calculadora">
             <h1>Calculadora</h1>
             <p id="resultado"></p>
-            <table> 
-                <tr> conteudo na celula da tabela
+            <table> <!-- cria uma tabela -->
+                <tr> <!-- conteudo na celula da tabela -->
                     <td><button class="botao" onclick="clean()">C</button ></td>
                     <td><button class="botao"onclick="back()"><</button></td>
                     <td><button class="botao" onclick="insert('/')">/</button ></td>
